--- a/src/translations/en/index.json
+++ b/src/translations/en/index.json
@@ -1,3 +1,6 @@
-{
-    "username" : "Username"
+{   
+    "vietnamese": "Vietnamese",
+    "english": "English",
+    "languages" : "Languages",
+    "logout": "Logout"
 }
